In progress refactoring - does not compile!